Make things die better, and despawn projectiles after a while + misc

--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -2,7 +2,6 @@
 
 name="Prog"
 main_scene="res://scenes/World/World.tscn"
-disable_stdout=true
 auto_accept_quit=true
 icon="res://icon.png"
 
@@ -12,8 +11,11 @@ GLOBALS="*res://scripts/GLOBALS.gd"
 
 [debug]
 
-indicators_enabled=true
 verbose_stdout=true
+script_max_call_stack=1024
+collision_shape_color=#7f0099b2
+collision_max_contacts_displayed=10000
+indicators_enabled=true
 print_metrics=true
 
 [display]
