Major refactoring and tweaking
Major refactoring, tweaking
Add fonts

--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -2,6 +2,7 @@
 
 name="Prog"
 main_scene="res://scenes/World/World.tscn"
+disable_stdout=false
 auto_accept_quit=true
 icon="res://icon.png"
 
@@ -11,11 +12,12 @@ GLOBALS="*res://scripts/GLOBALS.gd"
 
 [debug]
 
-verbose_stdout=true
+indicators_enabled=true
+print_fps=false
+verbose_stdout=false
 script_max_call_stack=1024
 collision_shape_color=#7f0099b2
 collision_max_contacts_displayed=10000
-indicators_enabled=true
 print_metrics=true
 
 [display]
