--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -55,6 +55,10 @@ attack=[mbutton(0, 2)]
 unstuck=[key(U)]
 rolltoggle=[key(Control)]
 
+[physics]
+
+fixed_fps=144
+
 [physics_2d]
 
 thread_model=1
