Add spawn timer

--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -6,6 +6,10 @@ disable_stdout=false
 auto_accept_quit=true
 icon="res://icon.png"
 
+[autoload]
+
+GameRound="*res://scripts/GameRound.gd"
+
 [debug]
 
 indicators_enabled=true
@@ -39,14 +43,13 @@ repeat=true
 
 [input]
 
-spawn_enemy=[mbutton(0, 3)]
-reset=[key(Space)]
+spawn_enemy=[mbutton(0, 3), key(B)]
+move_to=[mbutton(0, 1), key(Space)]
 thruster_activation=[key(), key(O), key(A), key(E), key(Up), key(Left), key(Right), key(Down)]
 move_up=[key(), key(Up)]
 move_down=[key(O), key(Down)]
 move_left=[key(A), key(Left)]
 move_right=[key(E), key(Right)]
-move_to=[mbutton(0, 1)]
 attack=[mbutton(0, 2)]
 unstuck=[key(U)]
 rolltoggle=[key(Control)]
