Further adapting of imported MP components

--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -1,13 +1,14 @@
 [application]
 
 name="Prog"
-main_scene="res://scenes/World/World.tscn"
+main_scene="res://scenes/MainMenu.tscn"
 disable_stdout=false
 auto_accept_quit=true
 icon="res://icon.png"
 
 [autoload]
 
+GameState="*res://scripts/GameState.gd"
 GameRound="*res://scripts/GameRound.gd"
 
 [debug]
