--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -44,6 +44,7 @@ repeat=true
 
 [input]
 
+quit_game=[key(Escape), key(Q, C)]
 spawn_enemy=[mbutton(0, 3), key(B)]
 move_to=[mbutton(0, 1), key(Space)]
 thruster_activation=[key(), key(O), key(A), key(E), key(Up), key(Left), key(Right), key(Down)]
@@ -52,8 +53,6 @@ move_down=[key(O), key(Down)]
 move_left=[key(A), key(Left)]
 move_right=[key(E), key(Right)]
 attack=[mbutton(0, 2)]
-unstuck=[key(U)]
-rolltoggle=[key(Control)]
 
 [physics]
 
